# language_learning_app

./: README.md
.github/workflows/: code_style.yml
backend/: .env  .flake8  alembic.ini  exceptions.py  pyproject.toml  settings.py
backend/app/: app.py  middleware.py  settings.py
backend/app/database/: connection.py  models.py  user.py
backend/app/dtos/: common.py  exercise.py  lesson.py  user.py
backend/app/services/: auth.py
backend/app/utils/: logging.py
backend/database/: connection.py  models.py  user.py
backend/dtos/: common.py  exercise.py  lesson.py  user.py
backend/migration/: env.py
backend/migration/versions/: 70a183d537c4_initial.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_migration.py
backend/tests/: __init__.py  conftest.py  test_models.py
backend/utils/: __init__.py  logging.py
